@@ -1,6 +1,6 @@
 // Locale support -*- C++ -*-
 
-// Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006
+// Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
 // Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
@@ -192,7 +192,10 @@ _GLIBCXX_END_LDBL_NAMESPACE
   template class collate_byname<C>;
     
   // use_facet
-  // NB: use_facet<ctype> is specialized
+  template
+    const ctype<C>& 
+    use_facet<ctype<C> >(const locale&);
+
   template
     const codecvt<C, char, mbstate_t>& 
     use_facet<codecvt<C, char, mbstate_t> >(const locale&);
